# ehbc-firmware

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  configure
arch/: Config.cmake
arch/m68k/: Config.cmake  asm.S  stack_frame.h  start.S  vector.c  vector.h
board/: Config.cmake
board/proto1/: Config.cmake  ldscript.x  proto1.c
cmake/: ConfigDependency.cmake
elf/: Config.cmake  elf.c
fs/: Config.cmake
fs/fat/: Config.cmake  fat.c  fat.h  fat_internal.h
fs/ptable/: mbr.h
hw/: Config.cmake  device.c
hw/ata/: Config.cmake  ata.c  ata_internal.h
hw/board/: Config.cmake
hw/escc/: Config.cmake  escc.c
include/: stop.h  types.h
include/ehbc/: class.h  ctype.h  elf.h  format.h  iodev.h  memory.h  printf.h  section.h  stack.h  stream.h  string.h  struct.h  swap.h  types.h  units.h
include/ehbc/asm/: asm.h
include/ehbc/boot/: service.h
include/ehbc/encoding/: ascii.h  encoding.h  ucs2.h  utf8.h
include/ehbc/fs/: fat.h  filesystem.h  path.h
include/ehbc/hw/: ata.h  board.h  bus.h  device.h  escc.h
include/ehbc/io/: file.h
include/ehbc/storage/: drive.h  partition.h
ldscripts/: firmware.ld  firmware.x
src/: Config.cmake  class.c  ctype.c  elf.c  format.c  iodev.c  main.c  memory.c  start.c  stop.asm  stream.c  string.c  utils.c  vsnprintf.c
src/devices/: mc68901.c
src/encoding/: encoding.c  ucs2.c  utf8.c
utils/: dump_elf.sh
